# mqtt-typed-client-next

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  TODO2.md  deny.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml.disabled
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: client.rs  connection.rs  connection_state.rs  lib.rs  message_meta.rs  message_serializer.rs  routing.rs  topic.rs
core/src/client/: async_client.rs  config.rs  connection_options.rs  error.rs  last_will.rs  publisher.rs  subscriber.rs  subscription_builder.rs
core/src/routing/: error.rs  subscriber.rs  subscription_manager.rs
core/src/structured/: mod.rs  subscriber.rs
dev/: README.md  docker-compose.yml
dev/certs/: generate-certs.sh
docs/: COMPARISON_WITH_RUMQTTC.md  FUTURE_WORK_RESEARCH.md  PLAN_0.3.md  PLAN_0.3_CONNSTATE.md  PLAN_0.3_DELEAK.md  PLAN_0.3_RELEASE.md  PLAN_0.4.md  ROADMAP.md
docs/research/: CLIENT_LIBRARY_LANDSCAPE_2026.md  DUAL_PROTOCOL_API_DESIGN_2026.md  FASTMQTT_API_IDEAS_2026.md  MQTT5_CRATE_EVALUATION_2026.md  RUMQTTC_NEXT_AUDIT_2026.md
examples/: .env  .env.example  000_hello_world.rs  001_ping_pong.rs  002_configuration.rs  003_hello_world_lwt.rs  004_hello_world_tls.rs  005_hello_world_serializers.rs  006_retain_and_clear.rs  007_custom_patterns.rs  008_modular_example.rs  009_message_metadata.rs  010_connection_state.rs  100_all_serializers_demo.rs  102_multi_serializer_macro.rs  README.md  rumqttc_v4_typed_client.rs  rumqttc_v5_connect_properties.rs  rumqttc_v5_publish_properties.rs
examples/internal/: 010_basic_usage.rs  010_hello_universum.rs  011_multy_sensor_system.rs  101_multi_serializer_manual.rs  advanced_config.rs  advanced_example.rs  another.rs  basic_macro.rs  basic_usage.rs  demo_all_methods.rs  full_test.rs  main_example.rs  prepare_for_macro.rs  prepare_for_macro_publisher.rs  structured_macro.rs  test_custom_patterns.rs  test_pattern_validation.rs  test_publisher_with_pattern.rs  typed_client_demo.rs  with_client.rs
examples/modular_example/: mod.rs  runner.rs  topics.rs
examples/shared/: config.rs  tracing.rs
macros/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
macros/src/: analysis.rs  analysis_test.rs  codegen.rs  codegen_test.rs  codegen_typed_client.rs  lib.rs  lib_test.rs  naming.rs
mqtt-topic-engine/: CHANGELOG.md  Cargo.toml  README.md
mqtt-topic-engine/src/: cache_strategy.rs  error.rs  lib.rs  qos.rs  topic_match.rs  topic_matcher.rs  topic_matcher_tests.rs  topic_pattern_item.rs  topic_pattern_item_tests.rs  topic_pattern_path.rs  topic_pattern_path_tests.rs  topic_router.rs
scripts/: README.md  dev-helpers.sh
src/: lib.rs
tests/: serializer_macro_integration.rs  serializers_integration.rs
