[workspace]
members = ["core", "macros", "mqtt-topic-engine"]
resolver = "2"

# Shared dependency versions for all workspace members. Members opt in with
# `rumqttc = { workspace = true, features = [...] }` and add their own features.
[workspace.dependencies]
rumqttc-v4 = { package = "rumqttc-v4-next", version = "0.33.0", path = "../rumqtt/rumqttc-v4", default-features = false }
rumqttc-v5 = { package = "rumqttc-v5-next", version = "0.33.0", path = "../rumqtt/rumqttc-v5", default-features = false }

[package]
name = "mqtt-typed-client-next"
version = "0.2.0"
edition = "2021"
rust-version = "1.89.0"
description = "Type-safe async MQTT client with automatic topic routing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
homepage = "https://github.com/holovskyi/mqtt-typed-client"
documentation = "https://docs.rs/mqtt-typed-client"
keywords = ["mqtt", "iot", "async", "typed", "client"]
categories = ["network-programming", "asynchronous"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

# The root crate lives at the repo root, so `cargo package` would otherwise sweep
# in CI configs, internal planning docs, dev certs (incl. a private key!), scratch
# examples, and other repo-only files. Keep the published crate to source + public
# examples + docs. Member crates (core/macros/engine) live in subdirs
# and need no exclude.
# NOTE: `docs/COMPARISON_WITH_RUMQTTC.md` is `include_str!`-embedded as the
# `comparison` module doc (src/lib.rs), so it MUST ship — exclude only the
# internal docs (e.g. ROADMAP) rather than all of `docs/`.
exclude = [
	".github/",
	".cargo/",
	"dev/",
	"docs/ROADMAP.md",
	"scripts/",
	"examples/internal/",
	"check_result.txt",
	".enable-ai-filesystem",
	".gitattributes",
	"deny.toml",
	"rust-toolchain.toml",
	"rustfmt.toml",
]

[lib]
name = "mqtt_typed_client"

# docs.rs must not build all features because the rumqttc-v4 and rumqttc-v5
# backends are intentionally mutually exclusive.
[package.metadata.docs.rs]
features = ["rumqttc-v5", "macros", "wincode", "json", "rumqttc-url", "rumqttc-use-rustls"]

[dependencies]
mqtt-typed-client-core = { package = "mqtt-typed-client-core-next", path = "./core", version = "0.2.0", default-features = false }

mqtt-typed-client-macros = { package = "mqtt-typed-client-macros-next", path = "./macros", version = "0.2.0", optional = true }

rumqttc-v4 = { workspace = true, optional = true }
rumqttc-v5 = { workspace = true, optional = true }

[features]
default = ["rumqttc-v4", "macros", "wincode", "json", "rumqttc-url", "rumqttc-use-rustls"]
rumqttc-v4 = ["dep:rumqttc-v4", "mqtt-typed-client-core/rumqttc-v4", "mqtt-typed-client-macros?/rumqttc-v4"]
rumqttc-v5 = ["dep:rumqttc-v5", "mqtt-typed-client-core/rumqttc-v5", "mqtt-typed-client-macros?/rumqttc-v5"]
macros = ["mqtt-typed-client-macros"]
wincode = ["mqtt-typed-client-core/wincode-serializer"]
json = ["mqtt-typed-client-core/json"]
messagepack = ["mqtt-typed-client-core/messagepack"]
cbor = ["mqtt-typed-client-core/cbor"]
postcard = ["mqtt-typed-client-core/postcard"]
protobuf = ["mqtt-typed-client-core/protobuf"]
ron = ["mqtt-typed-client-core/ron"]
flexbuffers = ["mqtt-typed-client-core/flexbuffers"]

rumqttc-url = ["rumqttc-v4?/url", "rumqttc-v5?/url", "mqtt-typed-client-core/rumqttc-url"]
rumqttc-websocket = ["rumqttc-v4?/websocket", "rumqttc-v5?/websocket", "mqtt-typed-client-core/rumqttc-websocket"]
rumqttc-use-rustls = ["rumqttc-v4?/use-rustls", "rumqttc-v5?/use-rustls", "mqtt-typed-client-core/rumqttc-use-rustls"]
# rustls without bundling a crypto provider (e.g. aws-lc-rs). Use this to bring
# your own provider (such as ring) and avoid the aws-lc cross-compilation pain.
rumqttc-use-rustls-no-provider = ["rumqttc-v4?/use-rustls-no-provider", "rumqttc-v5?/use-rustls-no-provider", "mqtt-typed-client-core/rumqttc-use-rustls-no-provider"]
rumqttc-use-native-tls = ["rumqttc-v4?/use-native-tls", "rumqttc-v5?/use-native-tls", "mqtt-typed-client-core/rumqttc-use-native-tls"]
rumqttc-proxy = ["rumqttc-v4?/proxy", "rumqttc-v5?/proxy", "mqtt-typed-client-core/rumqttc-proxy"]


[dev-dependencies]
wincode = { version = "0.5.5", features = ["derive"] }
dotenvy = "0.15"
rand = "0.10.2"
rumqttc-v4 = { workspace = true, features = ["url", "use-rustls"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
serde = "1.0.219"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
rmp-serde = "1.3"
chrono = { version = "0.4.41", features = ["serde"] }

[[example]]
name = "004_hello_world_tls"
required-features = ["rumqttc-use-rustls"]

[[example]]
name = "100_all_serializers_demo"
required-features = ["wincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]
