[workspace]
members = ["core", "macros", "mqtt-topic-engine"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]

# Shared dependency versions for all workspace members.
[workspace.dependencies]
rumqttc-v4 = { package = "rumqttc-v4-next", version = "0.33.0", path = "../rumqtt/rumqttc-v4", default-features = false }
rumqttc-v5 = { package = "rumqttc-v5-next", version = "0.33.0", path = "../rumqtt/rumqttc-v5", default-features = false }

[package]
name = "mqtt-typed-client-next"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "Type-safe async MQTT client with automatic topic routing"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/holovskyi/mqtt-typed-client"
documentation = "https://docs.rs/mqtt-typed-client"
keywords = ["mqtt", "iot", "async", "typed", "client"]
categories = ["network-programming", "asynchronous"]
authors.workspace = true
readme = "README.md"

# The root crate lives at the repo root, so `cargo package` would otherwise sweep
# in CI configs, internal planning docs, dev certs (incl. a private key!), scratch
# examples, and other repo-only files. Keep the published crate to source + public
# examples + docs. Member crates (core/macros/engine) live in subdirs
# and need no exclude.
# NOTE: `docs/COMPARISON_WITH_RUMQTTC.md` is `include_str!`-embedded as the
# `comparison` module doc (src/lib.rs), so it MUST ship — exclude only the
# internal docs (ROADMAP, the PLAN_*.md working docs) rather than all of `docs/`.
exclude = [
	".github/",
	".cargo/",
	"dev/",
	"docs/ROADMAP.md",
	"docs/PLAN_*.md",
	"docs/FUTURE_WORK_RESEARCH.md",
	"docs/research/",
	"scripts/",
	"examples/internal/",
	"check_result.txt",
	".enable-ai-filesystem",
	".gitattributes",
	"deny.toml",
	"rust-toolchain.toml",
	"rustfmt.toml",
]

# docs.rs must not build all features because the rumqttc-v4 and rumqttc-v5
# backends are intentionally mutually exclusive.
[package.metadata.docs.rs]
features = ["rumqttc-v5", "macros", "wincode", "json", "tls-rustls"]

[dependencies]
mqtt-typed-client-core = { package = "mqtt-typed-client-core-next", path = "./core", version = "0.3.0", default-features = false }

mqtt-typed-client-macros = { package = "mqtt-typed-client-macros-next", path = "./macros", version = "0.3.0", optional = true, default-features = false }

rumqttc-v4 = { workspace = true, optional = true }
rumqttc-v5 = { workspace = true, optional = true }

[lib]
name = "mqtt_typed_client"

[features]
default = ["rumqttc-v4", "macros", "wincode", "json", "tls-rustls"]
rumqttc-v4 = ["dep:rumqttc-v4", "mqtt-typed-client-core/rumqttc-v4", "mqtt-typed-client-macros?/rumqttc-v4"]
rumqttc-v5 = ["dep:rumqttc-v5", "mqtt-typed-client-core/rumqttc-v5", "mqtt-typed-client-macros?/rumqttc-v5"]
macros = ["mqtt-typed-client-macros"]
wincode = ["mqtt-typed-client-core/wincode-serializer"]
json = ["mqtt-typed-client-core/json"]
messagepack = ["mqtt-typed-client-core/messagepack"]
cbor = ["mqtt-typed-client-core/cbor"]
postcard = ["mqtt-typed-client-core/postcard"]
protobuf = ["mqtt-typed-client-core/protobuf"]
ron = ["mqtt-typed-client-core/ron"]
flexbuffers = ["mqtt-typed-client-core/flexbuffers"]

# Transport capability features (route through core/backend).
websocket = ["rumqttc-websocket", "mqtt-typed-client-core/websocket"]
tls-rustls = ["rumqttc-v4?/use-rustls", "rumqttc-v5?/use-rustls", "mqtt-typed-client-core/tls-rustls"]
# rustls without bundling a crypto provider (e.g. aws-lc-rs). Use this to bring
# your own provider (such as ring) and avoid the aws-lc cross-compilation pain.
tls-rustls-no-provider = ["rumqttc-v4?/use-rustls-no-provider", "rumqttc-v5?/use-rustls-no-provider", "mqtt-typed-client-core/tls-rustls-no-provider"]
tls-native = ["rumqttc-use-native-tls", "mqtt-typed-client-core/tls-native"]
proxy = ["rumqttc-proxy", "mqtt-typed-client-core/proxy"]
# SEMVER-EXEMPT escape hatch: raw backend options access (backend_tweak).
unstable-backend-api = ["mqtt-typed-client-core/unstable-backend-api"]

rumqttc-url = ["rumqttc-v4?/url", "rumqttc-v5?/url"]
rumqttc-websocket = ["rumqttc-v4?/websocket", "rumqttc-v5?/websocket", "mqtt-typed-client-core/rumqttc-websocket"]
rumqttc-use-rustls = ["tls-rustls"]
rumqttc-use-rustls-no-provider = ["tls-rustls-no-provider"]
rumqttc-use-native-tls = ["rumqttc-v4?/use-native-tls", "rumqttc-v5?/use-native-tls", "mqtt-typed-client-core/rumqttc-use-native-tls"]
rumqttc-proxy = ["rumqttc-v4?/proxy", "rumqttc-v5?/proxy", "mqtt-typed-client-core/rumqttc-proxy"]


[dev-dependencies]
wincode = { version = "0.5.5", features = ["derive"] }
dotenvy = "0.15"
rand = "0.10.2"
rumqttc-v4 = { workspace = true }
rumqttc-v5 = { workspace = true }
rustls-pki-types = { version = "1.9", features = ["std"] }
rustls-pemfile = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
rmp-serde = "1.3"
chrono = { version = "0.4.41", features = ["serde"] }

[[example]]
name = "004_hello_world_tls"
required-features = ["tls-rustls"]

[[example]]
name = "100_all_serializers_demo"
required-features = ["wincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]

[[test]]
name = "serializers_integration"
required-features = ["wincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]

[[test]]
name = "serializer_macro_integration"
required-features = ["macros", "wincode", "json"]

[[example]]
name = "rumqttc_v4_typed_client"
required-features = ["rumqttc-v4", "macros", "json"]

[[example]]
name = "rumqttc_v5_connect_properties"
required-features = ["rumqttc-v5", "macros", "json", "unstable-backend-api"]

[[example]]
name = "rumqttc_v5_publish_properties"
required-features = ["rumqttc-v5", "macros", "json", "unstable-backend-api"]
