[package]
name = "mqtt-typed-client-core-next"
version = "0.2.0"
edition = "2021"
rust-version = "1.89.0"
description = "Type-safe async MQTT client core with automatic topic routing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "iot", "async", "typed", "client"]
categories = ["network-programming", "asynchronous"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

[lib]
name = "mqtt_typed_client_core"

# docs.rs must not build all features because the rumqttc-v4 and rumqttc-v5
# backends are intentionally mutually exclusive.
[package.metadata.docs.rs]
features = ["rumqttc-v5", "wincode-serializer", "json", "rumqttc-url", "rumqttc-use-rustls"]

[features]
default = ["rumqttc-v4", "wincode-serializer", "json"]
rumqttc-v4 = ["dep:rumqttc-v4", "rumqttc-v4/url", "mqtt-topic-engine/rumqttc-v4"]
rumqttc-v5 = ["dep:rumqttc-v5", "rumqttc-v5/url", "mqtt-topic-engine/rumqttc-v5"]
rumqttc-url = ["rumqttc-v4?/url", "rumqttc-v5?/url"]
rumqttc-websocket = ["rumqttc-v4?/websocket", "rumqttc-v5?/websocket"]
rumqttc-use-rustls = ["rumqttc-v4?/use-rustls", "rumqttc-v5?/use-rustls"]
rumqttc-use-rustls-no-provider = ["rumqttc-v4?/use-rustls-no-provider", "rumqttc-v5?/use-rustls-no-provider"]
rumqttc-use-native-tls = ["rumqttc-v4?/use-native-tls", "rumqttc-v5?/use-native-tls"]
rumqttc-proxy = ["rumqttc-v4?/proxy", "rumqttc-v5?/proxy"]
wincode-serializer = ["dep:wincode"]
json = ["dep:serde_json"]
messagepack = ["dep:rmp-serde"]
cbor = ["dep:ciborium"]
postcard = ["dep:postcard"]
protobuf = ["dep:prost"]
ron = ["dep:ron"]
flexbuffers = ["dep:flexbuffers"]


[dependencies]
arcstr = "1.2"
wincode = { version = "0.5.5", features = ["derive"], optional = true }
bytes = "1.10"
futures = "0.3"
lru = "0.18"
rumqttc-v4 = { workspace = true, optional = true }
rumqttc-v5 = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
postcard = { version = "1.0", optional = true, features = ["alloc"] }
prost = { version = "0.14", optional = true }
ron = { version = "0.12", optional = true }
flexbuffers = { version = "25.12", optional = true }
mqtt-topic-engine = { package = "mqtt-topic-engine-next", path = "../mqtt-topic-engine", version = "0.1.1" }


[dev-dependencies]
serde_json = "1.0.140"
# Dependencies for examples and tests
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
