[package]
name = "mqtt-typed-client-core-next"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "Type-safe async MQTT client core with automatic topic routing"
license.workspace = true
repository.workspace = true
keywords = ["mqtt", "iot", "async", "typed", "client"]
categories = ["network-programming", "asynchronous"]
authors.workspace = true
readme = "README.md"

[lib]
name = "mqtt_typed_client_core"

# docs.rs must not build all features because the rumqttc-v4 and rumqttc-v5
# backends are intentionally mutually exclusive.
[package.metadata.docs.rs]
features = ["rumqttc-v5", "wincode-serializer", "json", "tls-rustls"]

[features]
default = ["rumqttc-v4", "wincode-serializer", "json"]
rumqttc-v4 = ["dep:rumqttc-v4", "rumqttc-v4/url", "mqtt-topic-engine/rumqttc-v4"]
rumqttc-v5 = ["dep:rumqttc-v5", "rumqttc-v5/url", "mqtt-topic-engine/rumqttc-v5"]
# Transport capability features: forward to the backend, never change public
# type shapes (see docs/research/DUAL_PROTOCOL_API_DESIGN_2026.md).
websocket = ["rumqttc-websocket"]
tls-rustls = ["rumqttc-v4?/use-rustls", "rumqttc-v5?/use-rustls"]
tls-rustls-no-provider = ["rumqttc-v4?/use-rustls-no-provider", "rumqttc-v5?/use-rustls-no-provider"]
tls-native = ["rumqttc-use-native-tls"]
proxy = ["rumqttc-proxy"]
rumqttc-url = ["rumqttc-v4?/url", "rumqttc-v5?/url"]
rumqttc-websocket = ["rumqttc-v4?/websocket", "rumqttc-v5?/websocket"]
rumqttc-use-rustls = ["tls-rustls"]
rumqttc-use-rustls-no-provider = ["tls-rustls-no-provider"]
rumqttc-use-native-tls = ["rumqttc-v4?/use-native-tls", "rumqttc-v5?/use-native-tls"]
rumqttc-proxy = ["rumqttc-v4?/proxy", "rumqttc-v5?/proxy"]
# SEMVER-EXEMPT escape hatch: raw backend options access (backend_tweak).
unstable-backend-api = []
wincode-serializer = ["dep:wincode"]
json = ["dep:serde_json"]
messagepack = ["dep:rmp-serde"]
cbor = ["dep:ciborium"]
postcard = ["dep:postcard"]
protobuf = ["dep:prost"]
ron = ["dep:ron"]
flexbuffers = ["dep:flexbuffers"]


[dependencies]
arcstr = "1.2"
wincode = { version = "0.5.5", features = ["derive"], optional = true }
bytes = "1.10"
futures = "0.3"
lru = "0.18"
rumqttc-v4 = { workspace = true, optional = true }
rumqttc-v5 = { workspace = true, optional = true }
url = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
postcard = { version = "1.0", optional = true, features = ["alloc"] }
prost = { version = "0.14", optional = true }
ron = { version = "0.12", optional = true }
flexbuffers = { version = "25.12", optional = true }
mqtt-topic-engine = { package = "mqtt-topic-engine-next", path = "../mqtt-topic-engine", version = "0.1.2" }


# Dev-only: used by tests to exercise the `mqtt_topic` macro against core types.
# Path-only (NO version) on purpose — `macros` depends on `core`, so a versioned
# dev-dep would form an unpublishable cycle (core would require macros 0.3.0,
# which is only published AFTER core). Cargo strips path-only dev-deps from the
# published manifest, so core publishes without needing macros in the index.
[dev-dependencies]
mqtt-typed-client-macros = { package = "mqtt-typed-client-macros-next", path = "../macros" }
serde_json = "1.0.140"
# Dependencies for examples and tests
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
