[package]
name = "mqtt-typed-client-macros-next"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for type-safe async MQTT client with automatic topic routing"
license.workspace = true
repository.workspace = true
keywords = ["mqtt", "macros", "typed", "procedural"]
categories = ["development-tools::procedural-macro-helpers"]
authors.workspace = true
readme = "README.md"

[lib]
name = "mqtt_typed_client_macros"
proc-macro = true

[features]
rumqttc-v4 = ["mqtt-typed-client-core/rumqttc-v4"]
rumqttc-v5 = ["mqtt-typed-client-core/rumqttc-v5"]

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.103"
mqtt-typed-client-core = { package = "mqtt-typed-client-core-next", path = "../core", version = "0.2.0", default-features = false }

[dev-dependencies]
tokio = "1.45.1"
mqtt-typed-client-core = { package = "mqtt-typed-client-core-next", path = "../core", version = "0.2.0", default-features = false }
