[package]
name = "mqtt-topic-engine-next"
version = "0.1.1"
edition = "2021"
rust-version = "1.82.0"

description = "High-performance MQTT topic pattern matching and routing engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "topic", "pattern", "matching", "routing"]
categories = ["network-programming", "parser-implementations"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

[lib]
name = "mqtt_topic_engine"

# docs.rs: document the pure-Rust interop features. paho-mqtt is deliberately
# EXCLUDED — it links a native C library that the docs.rs builder lacks, so
# all-features would fail. router + lru-cache (defaults) are documented too.
[package.metadata.docs.rs]
features = ["rumqttc", "ntex-mqtt"]

[dependencies]
arcstr = "1.2"
smallvec = "1.15"
lru = { version = "0.15", optional = true }
thiserror = "2.0"
rumqttc-v4 = { workspace = true, optional = true }
rumqttc-v5 = { workspace = true, optional = true }
paho-mqtt = { version = "0.13", optional = true, default-features = false }
ntex-mqtt = { version = "5", optional = true, default-features = false }
tracing = "0.1"

[features]
default = ["router", "lru-cache"]
router = []
lru-cache = ["dep:lru"]
rumqttc = ["rumqttc-v4"]
rumqttc-v4 = ["dep:rumqttc-v4"]
rumqttc-v5 = ["dep:rumqttc-v5"]
paho-mqtt = ["dep:paho-mqtt"]
ntex-mqtt = ["dep:ntex-mqtt"]
